# python-si

./: .coveragerc  .gitignore  .lefthook.yml  .mypy.ini  .pytest.toml  .ruff.toml  noxfile.py  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh
src/si/: __init__.py
