[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-si"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]
dependencies = [
  "typing-extensions>=4.15.0,<5",
]

[dependency-groups]
dev = [
  { include-group = "debug" },
  { include-group = "mypy" },
  { include-group = "pytest" },
  { include-group = "ruff" },
]
debug = [
  "ipython>=8.37.0,<9",
]
mypy = [
  "mypy>=1.19.0,<2",
  { include-group = "pytest" },
]
pytest = [
  "pytest>=9.0.1,<10",
  "pytest-cov>=7.0.0,<8",
  "pytest-mock>=3.15.1,<4",
  "pytest-randomly>=4.0.1,<5",
]
ruff = [
  "ruff>=0.14.7,<0.15",
]

[tool.setuptools.dynamic]
version = { attr = "si.__version__" }

[tool.uv]
default-groups = []
required-version = ">=0.9.13,<0.10"
